# ComfyUI-FFMPEGA

./: .coveragerc  .gitignore  .pre-commit-config.yaml  ADVANCED_TEST_PROMPTS.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOM_SKILLS.md  LICENSE  LLMS.md  PRD.md  README.md  SKILLS_REFERENCE.md  SKILL_TEST_PROMPTS.md  State-of-the-Art Video-to-Audio Generati.md  __init__.py  bench.py  bench2.py  conftest.py  git_clones.json  index.html  install.py  package.json  perf2.py  perf3.py  perf_build.py  perf_build_opt.py  perf_build_opt10.py  perf_build_opt11.py  perf_build_opt12.py  perf_build_opt13.py  perf_build_opt3.py  perf_build_opt5.py  perf_build_opt6.py  perf_build_opt7.py  perf_build_opt8.py  perf_build_opt9.py  perf_dedup.py  perf_dedup_opt.py  perf_opt_builder.py  perf_opt_chain.py  (+23 more)
.jules/: bolt.md  bugbot_prompt.md  palette.md  sentinel.md
config/: models.yaml
core/: __init__.py  bin_paths.py  errors.py  flux_klein_editor.py  images_to_video.py  lama_inpainter.py  liveportrait_synthesizer.py  logging.py  media_converter.py  mmaudio_synthesizer.py  model_config.py  model_manager.py  musetalk_synthesizer.py  pipeline_generator.py  platform.py  ptc_executor.py  sam3_masker.py  sanitize.py  token_tracker.py  whisper_transcriber.py
custom_skills/: .gitkeep
example_workflows/: 4x4_Video_Grid_Ex_v1.json  Bouncing_Logo_Animation_Ex_v1.json  Colorgrade_Text_Overlay_Ex_v1.json  Colorhold_VHS_Tensors_Ex_v1.json  Datamosh_Special_Effects_VHS_Tensors_Ex_v1.json  Greenscreen_Remove_VHS_Tensors_Ex_v1.json  Multi_Special_Effects_Ex_v1.json  PiP_Video_Overlay_Example_v1.json  Simple_Colograde_Ex_v1.json  Slideshow_Audio_Example_v1.json  Subtitle_Burn_Ex_v1.json
js/: ffmpega_effects_ui.js  ffmpega_ui.js
loadlast/: __init__.py  constants.py  load_last_image.py  load_last_video.py
luts/: README.md  bleach_bypass.cube  cinematic_teal_orange.cube  cool_scifi.cube  cross_process.cube  film_noir.cube  generate_luts.py  golden_hour.cube  neutral_clean.cube  warm_vintage.cube
mcp/: __init__.py  resources.py  server.py  stdio_server.py  tool_defs.py  tools.py  vision.py
nodes/: __init__.py  agent_node.py  batch_node.py  batch_processor.py  effects_node.py  execution_engine.py  frame_extract_node.py  input_resolver.py  load_image_path_node.py  load_video_path_node.py  nollm_modes.py  output_handler.py  pipeline_assembler.py  preview_node.py  save_video_node.py  text_input_node.py  video_to_path_node.py
prompts/: __init__.py  analysis.py  generation.py  system.py
scripts/: convert_liveportrait_weights.py
skills/: __init__.py  composer.py  handler_contract.py  registry.py  yaml_loader.py
src/: ffmpega_effects_ui.ts  ffmpega_ui.ts
stubs/: folder_paths.pyi
tests/: __init__.py  check_cli_connectors.py  conftest.py  test_agents.py  test_animate_portrait.py  test_auto_mask.py  test_cli_connectors.py  test_cli_retry.py  test_connectors_tools.py  test_effects_node.py  test_executor.py  test_flux_klein.py  test_frames_to_tensor_perf.py  test_generate_audio.py  test_handlers_unit.py  test_input_security.py  test_integration.py  test_lip_sync.py  (+38 more)
(+151 files in other folders)
