[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-ffmpega"
version = "2.9.0"
description = "Intelligent FFMPEG agent node for ComfyUI with natural language video editing"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Æmotion Studio"}
]
keywords = ["comfyui", "ffmpeg", "video-editing", "ai-agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
masking = ["rembg[cpu]>=2.0.50"]
ollama = ["ollama>=0.1.0"]
mcp = ["mcp>=1.0.0"]
whisper = ["openai-whisper>=20240930"]  # pip install 'comfyui-ffmpega[whisper]'
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.400",
]

[project.urls]
Homepage = "https://github.com/AEmotionStudio/ComfyUI-FFMPEGA"
Repository = "https://github.com/AEmotionStudio/ComfyUI-FFMPEGA"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodes*", "core*", "skills*", "mcp*", "prompts*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "config/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.comfy]
PublisherId = "aemotionstudio"
DisplayName = "ComfyUI-FFMPEGA"
Icon = ""
